--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,6 +7,39 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Stuff goes here</h1>
+    <h1>Amazing websocket ui</h1>
+    <p>Who needs css am I right</p>
+    <hr>
+    <input type="text" id="roomid" placeholder="roomid">
+    <input type="button" value="Transfer to room" onclick="transfer()">
 </body>
+
+<script>
+const ws = new WebSocket("ws://localhost:8000/ws")
+
+ws.onmessage = event => {
+    let data = JSON.parse(event.data);
+
+    switch(data.type) {
+        case "transferred":
+            room = data.roomid
+            // Do something with the room transfer
+            console.log("New room id: " + room)
+            break
+
+        default:
+            console.log("Unknown message type: " + data.type)
+            console.log(event)
+    }
+}
+
+function transfer() {
+    id = document.getElementById("roomid").value
+    ws.send(JSON.stringify({
+        type: "transfer",
+        roomid: id
+    }))
+}
+</script>
+
 </html>
