--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,87 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Amazing websocket ui</h1>
-    <p>Who needs css am I right</p>
+    <script defer src="index.js"></script>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div id="root">
+      <main>
+        <h1>Websocket UI</h1>
 
-    <p>Your name is: <span id="displayName">None</span></p>
-    <p>Your room is: <span id="displayRoom"></span></p>
+        <div class="container">
+          <p><b>Username:</b> <span id="displayName">None</span></p>
+          <p><b>Current room ID:</b> <span id="displayRoom">None</span></p>
+        </div>
 
-    <hr>
+        <hr />
+        <form class="container">
+          <div>
+            <label>
+              Username
+              <input type="text" id="name" placeholder="E.g. Jeff" />
+            </label>
+            <input type="button" value="Connect" onclick="connect()" />
+          </div>
+          <div>
+            <label>
+              Room ID
+              <input type="text" id="roomid" placeholder="E.g. 123" />
+            </label>
+            <input type="button" value="Transfer" onclick="transfer()" />
+          </div>
+        </form>
 
-    <input type="text" id="name" placeholder="Username">
-    <input type="button" value="Connect" onclick="connect()">
-    <br>
-    <input type="text" id="roomid" placeholder="roomid">
-    <input type="button" value="Transfer to room" onclick="transfer()">
+        <hr />
 
-    <hr>
-
-    <h2>Clients in room:</h2>
-    <div id="clients">
-
+        <div class="container">
+          <h2>Clients in room:</h2>
+          <ul id="clients"></ul>
+        </div>
+      </main>
     </div>
-</body>
-
-<script>
-let ws = null
-
-function connect() {
-    let name = document.getElementById("name").value
-    if (name != "") { ws = new WebSocket("ws://localhost:8000/ws?name="+name) }
-    else { ws = new WebSocket("ws://localhost:8000/ws") }
-
-    ws.onmessage = event => {
-        let data = JSON.parse(event.data);
-
-        switch(data.type) {
-            case "transferred":
-                room = data.roomid
-                // Do something with the room transfer
-                console.log("New room id: " + room)
-                document.getElementById("displayRoom").innerHTML = room
-
-                out = ""
-
-                data.clients.forEach(client => {
-                    out += "<p>" + client + "</p>"
-                });
-
-                document.getElementById("clients").innerHTML = ""
-                document.getElementById("clients").innerHTML = out
-                break
-            
-            case "new_connection":
-                document.getElementById("clients").innerHTML += "<p>" + data.name + "</p>"
-                break
-
-            // TODO: Need to also make this in python
-            case "client_disconnected":
-                break
-
-            default:
-                console.log("Unknown message type: " + data.type)
-                console.log(event)
-        }
-    }
-
-    console.log("Connected as " + name)
-    document.getElementById("displayName").innerHTML = name
-}
-
-function transfer() {
-    id = document.getElementById("roomid").value
-    ws.send(JSON.stringify({
-        type: "transfer",
-        roomid: id
-    }))
-}
-</script>
-
+  </body>
 </html>
