change room input type to number

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -30,7 +30,7 @@
           <div>
             <label>
               Room ID
-              <input type="text" id="roomid" placeholder="E.g. 123" />
+              <input type="number" id="roomid" placeholder="E.g. 123" />
             </label>
             <input type="button" value="Transfer" onclick="transfer()" />
           </div>
