Fixed bugs with connections

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -57,7 +57,7 @@
       <ul id="open-rooms"></ul>
       <label for="room_id">Room id:</label>
       <input id="room_id" type="number" />
-      <button onclick="join_room()">Connect</button>
+      <button onclick="join_room()">Join room</button>
       <br />
       <button onclick="create_room()">Create room</button>
     </div>
