--- a/src/client/index.html
+++ b/src/client/index.html
@@ -65,6 +65,8 @@
       <p id="current_room_id"></p>
       <p id="your_sign"></p>
       <p id="current_round"></p>
+      <p id="your_wins"></p>
+      <p id="opponent_wins"></p>
       <p id="info"></p>
       <button onclick="leave_room()">Leave room</button>
     </div>
